// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`services data All service summary for org 1`] = `
Object {
  "data": Object {
    "root": Object {
      "org": null,
    },
  },
}
`;

exports[`services data All service summary for program 1`] = `
Object {
  "data": Object {
    "root": Object {
      "program": null,
    },
  },
}
`;

exports[`services data All services and standards for org 1`] = `
Object {
  "data": Object {
    "root": Object {
      "org": null,
    },
  },
}
`;

exports[`services data All services and standards for program 1`] = `
Object {
  "data": Object {
    "root": Object {
      "program": null,
    },
  },
}
`;

exports[`services data Searching services by name 1`] = `
Array [
  Object {
    "data": Object {
      "en_root": Object {
        "search_by_english_word": Array [
          Object {
            "id": "172",
            "name": "Enquiries for Reporting Entities",
          },
        ],
        "search_by_french_word": Array [],
      },
    },
  },
  Object {
    "data": Object {
      "fr_root": Object {
        "diacritical_free_search": Array [
          Object {
            "id": "172",
            "name": "Demandes de renseignements d'entités déclarantes",
          },
          Object {
            "id": "204",
            "name": "Entreprises de services monétaires – Recherche d’entités inscrites",
          },
        ],
        "diacritical_search": Array [
          Object {
            "id": "172",
            "name": "Demandes de renseignements d'entités déclarantes",
          },
          Object {
            "id": "204",
            "name": "Entreprises de services monétaires – Recherche d’entités inscrites",
          },
        ],
        "multi_word_search": Array [
          Object {
            "id": "172",
            "name": "Demandes de renseignements d'entités déclarantes",
          },
        ],
        "partial_word_search": Array [
          Object {
            "id": "171",
            "name": "Communications de renseignements financiers",
          },
          Object {
            "id": "172",
            "name": "Demandes de renseignements d'entités déclarantes",
          },
          Object {
            "id": "195",
            "name": "Registre des entreprises de services monétaires (ESM) – Inscription te maintenance",
          },
          Object {
            "id": "204",
            "name": "Entreprises de services monétaires – Recherche d’entités inscrites",
          },
          Object {
            "id": "978",
            "name": "Demandes de renseignements du public et des médias",
          },
        ],
      },
    },
  },
]
`;

exports[`services data Single service 1`] = `
Object {
  "data": Object {
    "root": Object {
      "service": Array [
        Object {
          "accessibility_assessors": CoreMongooseArray [
            "",
          ],
          "account_reg_digital_status": false,
          "application_digital_status": false,
          "authentication_status": false,
          "collects_fees": false,
          "decision_digital_status": false,
          "description": "The Copyright Board of Canada issues non-exclusive licences authorizing the use of published copyrighted works when the copyright owner cannot be located, and outlines the terms under which the works can be used.",
          "designations": CoreMongooseArray [
            "None",
          ],
          "digital_enablement_comment": null,
          "digital_identity_platforms": CoreMongooseArray [
            "",
          ],
          "feedback_channels": CoreMongooseArray [
            "Email",
            "Postal Mail",
            "Telephone",
          ],
          "first_active_year": "2018",
          "id": "1120",
          "issuance_digital_status": false,
          "issue_res_digital_status": false,
          "last_accessibility_review": null,
          "last_active_year": null,
          "last_gender_analysis": null,
          "last_improve_from_feedback": null,
          "name": "Issuance of licences for the use of copyright works when the owner is unlocatable",
          "org": null,
          "org_id": "114",
          "program_activity_codes": CoreMongooseArray [
            "CB-BEZ01",
          ],
          "programs": Array [
            null,
          ],
          "recipient_type": CoreMongooseArray [
            "",
          ],
          "report_years": CoreMongooseArray [
            "2019",
            "2018",
          ],
          "scope": CoreMongooseArray [
            "External Service",
          ],
          "service_report": CoreDocumentArray [
            Object {
              "cra_business_ids_collected": false,
              "email_application_count": null,
              "fax_application_count": null,
              "live_application_count": 0,
              "mail_application_count": 0,
              "online_application_count": 0,
              "online_inquiry_count": 511,
              "other_application_count": 31,
              "phone_application_count": null,
              "phone_inquiry_and_application_count": null,
              "phone_inquiry_count": null,
              "service_id": "1120",
              "service_report_comment": "The number of telephone enquiries is not tracked due to the very low volume of enquiries received every year.",
              "sin_collected": null,
              "year": "2018",
            },
            Object {
              "cra_business_ids_collected": null,
              "email_application_count": null,
              "fax_application_count": null,
              "live_application_count": null,
              "mail_application_count": null,
              "online_application_count": null,
              "online_inquiry_count": null,
              "other_application_count": null,
              "phone_application_count": null,
              "phone_inquiry_and_application_count": null,
              "phone_inquiry_count": null,
              "service_id": "1120",
              "service_report_comment": null,
              "sin_collected": null,
              "year": "2019",
            },
          ],
          "service_type": CoreMongooseArray [
            "Legal",
          ],
          "standards": CoreDocumentArray [
            Object {
              "channel": "Other",
              "first_active_year": "2018",
              "last_active_year": null,
              "last_gcss_tool_year": null,
              "name": "Licences are issued within 45 days once the file is considered complete",
              "other_type_comment": "By email",
              "rtp_urls": CoreMongooseArray [],
              "service_id": "1120",
              "standard_id": "1073",
              "standard_report": CoreDocumentArray [
                Object {
                  "count": 4,
                  "is_target_met": false,
                  "lower": 70,
                  "met_count": 2,
                  "standard_id": "1073",
                  "standard_report_comment": "For 2018-2019: 31 applications were filed, 4 licences were issued and 7 applications were denied. Other includes copyright owners found, files on hold and requests abandoned. 
1073,2019,,100.00,,,,,",
                  "upper": 100,
                  "year": "2018",
                },
              ],
              "standard_urls": CoreMongooseArray [],
              "submission_year": "2018",
              "target_type": null,
              "type": "Timeliness",
            },
            Object {
              "channel": "Email",
              "first_active_year": "2018",
              "last_active_year": null,
              "last_gcss_tool_year": null,
              "name": "Licences are issued within 45 days once the file is considered complete",
              "other_type_comment": null,
              "rtp_urls": CoreMongooseArray [],
              "service_id": "1120",
              "standard_id": "1073",
              "standard_report": CoreDocumentArray [
                Object {
                  "count": 4,
                  "is_target_met": false,
                  "lower": 70,
                  "met_count": 2,
                  "standard_id": "1073",
                  "standard_report_comment": "For 2018-2019: 31 applications were filed, 4 licences were issued and 7 applications were denied. Other includes copyright owners found, files on hold and requests abandoned. 
1073,2019,,100.00,,,,,",
                  "upper": 100,
                  "year": "2018",
                },
              ],
              "standard_urls": CoreMongooseArray [],
              "submission_year": "2019",
              "target_type": null,
              "type": "Timeliness",
            },
          ],
          "submission_year": "2018",
          "target_groups": CoreMongooseArray [
            "Persons",
          ],
          "urls": CoreMongooseArray [
            "https://cb-cda.gc.ca/unlocatable-introuvables/brochure2-e.html",
          ],
        },
        Object {
          "accessibility_assessors": CoreMongooseArray [
            "",
          ],
          "account_reg_digital_status": false,
          "application_digital_status": false,
          "authentication_status": false,
          "collects_fees": false,
          "decision_digital_status": false,
          "description": "The Copyright Board of Canada issues non-exclusive licences authorizing the use of published copyrighted works when the copyright owner cannot be located, and outlines the terms under which the works can be used.",
          "designations": CoreMongooseArray [
            "None",
          ],
          "digital_enablement_comment": null,
          "digital_identity_platforms": CoreMongooseArray [
            "",
          ],
          "feedback_channels": CoreMongooseArray [
            "Email",
            "Postal Mail",
            "Telephone",
          ],
          "first_active_year": "2018",
          "id": "1120",
          "issuance_digital_status": false,
          "issue_res_digital_status": false,
          "last_accessibility_review": null,
          "last_active_year": null,
          "last_gender_analysis": null,
          "last_improve_from_feedback": null,
          "name": "Issuance of licences for the use of copyright works when the owner is unlocatable",
          "org": null,
          "org_id": "114",
          "program_activity_codes": CoreMongooseArray [
            "CB-BEZ01",
          ],
          "programs": Array [
            null,
          ],
          "recipient_type": CoreMongooseArray [
            "",
          ],
          "report_years": CoreMongooseArray [
            "2019",
            "2018",
          ],
          "scope": CoreMongooseArray [
            "External Service",
          ],
          "service_report": CoreDocumentArray [
            Object {
              "cra_business_ids_collected": false,
              "email_application_count": null,
              "fax_application_count": null,
              "live_application_count": 0,
              "mail_application_count": 0,
              "online_application_count": 0,
              "online_inquiry_count": 511,
              "other_application_count": 31,
              "phone_application_count": null,
              "phone_inquiry_and_application_count": null,
              "phone_inquiry_count": null,
              "service_id": "1120",
              "service_report_comment": "The number of telephone enquiries is not tracked due to the very low volume of enquiries received every year.",
              "sin_collected": null,
              "year": "2018",
            },
            Object {
              "cra_business_ids_collected": null,
              "email_application_count": null,
              "fax_application_count": null,
              "live_application_count": null,
              "mail_application_count": null,
              "online_application_count": null,
              "online_inquiry_count": null,
              "other_application_count": null,
              "phone_application_count": null,
              "phone_inquiry_and_application_count": null,
              "phone_inquiry_count": null,
              "service_id": "1120",
              "service_report_comment": null,
              "sin_collected": null,
              "year": "2019",
            },
          ],
          "service_type": CoreMongooseArray [
            "Legal",
          ],
          "standards": CoreDocumentArray [
            Object {
              "channel": "Other",
              "first_active_year": "2018",
              "last_active_year": null,
              "last_gcss_tool_year": null,
              "name": "Licences are issued within 45 days once the file is considered complete",
              "other_type_comment": "By email",
              "rtp_urls": CoreMongooseArray [],
              "service_id": "1120",
              "standard_id": "1073",
              "standard_report": CoreDocumentArray [
                Object {
                  "count": 4,
                  "is_target_met": false,
                  "lower": 70,
                  "met_count": 2,
                  "standard_id": "1073",
                  "standard_report_comment": "For 2018-2019: 31 applications were filed, 4 licences were issued and 7 applications were denied. Other includes copyright owners found, files on hold and requests abandoned. 
1073,2019,,100.00,,,,,",
                  "upper": 100,
                  "year": "2018",
                },
              ],
              "standard_urls": CoreMongooseArray [],
              "submission_year": "2018",
              "target_type": null,
              "type": "Timeliness",
            },
            Object {
              "channel": "Email",
              "first_active_year": "2018",
              "last_active_year": null,
              "last_gcss_tool_year": null,
              "name": "Licences are issued within 45 days once the file is considered complete",
              "other_type_comment": null,
              "rtp_urls": CoreMongooseArray [],
              "service_id": "1120",
              "standard_id": "1073",
              "standard_report": CoreDocumentArray [
                Object {
                  "count": 4,
                  "is_target_met": false,
                  "lower": 70,
                  "met_count": 2,
                  "standard_id": "1073",
                  "standard_report_comment": "For 2018-2019: 31 applications were filed, 4 licences were issued and 7 applications were denied. Other includes copyright owners found, files on hold and requests abandoned. 
1073,2019,,100.00,,,,,",
                  "upper": 100,
                  "year": "2018",
                },
              ],
              "standard_urls": CoreMongooseArray [],
              "submission_year": "2019",
              "target_type": null,
              "type": "Timeliness",
            },
          ],
          "submission_year": "2019",
          "target_groups": CoreMongooseArray [
            "Persons",
          ],
          "urls": CoreMongooseArray [
            "https://cb-cda.gc.ca/unlocatable-introuvables/brochure2-e.html",
          ],
        },
      ],
    },
  },
}
`;
